footer extra space bug solved

--- a/css/common.css
+++ b/css/common.css
@@ -9,6 +9,10 @@ html {
   scroll-behavior: smooth;
 }
 
+footer {
+  overflow: hidden;
+}
+
 a, a:hover, a::before, a::after, a:visited {
   text-decoration: none !important;
   color: inherit !important;
